[workspace]
resolver = "2"

members = [
    "spawning/b/spawning_tasks_example_experiment",
    "spawning/e/spawning_tasks_example_solution",
    "mutex/e/mutex_example",
    "mutex/b/mutex_example",
    "semaphore/b/semaphore_example",
    "semaphore/e/semaphore_example",
    "notify/b/notify_example",
    "notify/e/notify_example",
    "barrier/b/barrier_example",
    "barrier/e/barrier_example",
    "rwlock/b/rwlock_example",
    "rwlock/e/rwlock_example",
    "oneshot/b/oneshot_example",
    "oneshot/e/oneshot_example",
    "mpsc/b/mpsc_example",
    "mpsc/e/mpsc_example",
    "broadcast/b/broadcast_example",
    "broadcast/e/broadcast_example",
]